/*
 * $Id: ChangeLog,v 1.5133 2006/08/28 22:16:18 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-08-29 02:43 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/dbgwa.prg
    ! Fixed an error when navigating through workareas from a free workarea.

2006-08-29 02:15 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/vm/dbgentry.c
    ! Adopt the new pseudo-function naming scheme recently introduced by
      Przemek.

2006-08-27 20:05 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\rtl\memoedit.prg
    * fixed K_INS key treatment if udf is present.

2006-08-27 18:35 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\rtl\tbrowse.prg
    * reverted to previous code before of my last commit.

2006-08-26 15:04 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/browse.prg
    * Moved lBottom initialization for prevents browse crash with
      empty databases.

2006-08-24 16:10 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\rtl\memoedit.prg
    * fixed K_ESC key treatment if udf is present.

  * source\rtl\tbrowse.prg
    * changed moved() method to call forcestable() if any movement key
      is pressed before stabilization.

2006-08-24 15:40 UTC+0300 Pavel Tsarenko <tpe2@mail.ru>
  * hrbdll.bc
    + added missing dbgaltd.prg and (optional) modules from wvtgui

2006-08-21 15:35 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * utils\hbmake\hbmake.prg
    * fixed to get user defines and user includes at lib creation (-elx).
      bug reported in the news by Eric M.Magaldi.

2006-08-21 12:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
* include/hboo.ch
* source/vm/classes.c
  ! fix other possible problems related to the table of initial values of instance vars.

* include/inet.h
* include/thread.h
* source/vm/fastitem.c